# ray_tracing

./: Cargo.toml  README.md  gradient.ppm
outputs/: gradient.ppm  image_5.ppm  image_6_100sample.ppm  image_6_10sample.ppm  image_6_1sample.ppm  listing_11.ppm  listing_20.ppm  listing_9.ppm
src/: camera.rs  hittable.rs  lib.rs  main.rs  ppm.rs  types.rs
