[package]
name = "ray_tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
clap = { version = "4.4.11", features = ["derive"] }
glam = "0.25.0"
indicatif = "0.17.7"
itertools = "0.12.0"
rand = "0.8.5"
